# communication_wifi

./: .gitignore  0001-wifi.patch  0002-callback.patch  0003-rename-ffi.patch  0004-fix-codecheck.patch  1.cpp  160562release.p7b  BUILD.gn  CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  fix.txt  ohos.build  portal_login.rar  wifi.gni  wifi.patch
dhcp/: BUILD.gn  bundle.json  dhcp_lite.gni
dhcp/interfaces/inner_api/include/: dhcp_define.h  dhcp_service_api.h
dhcp/interfaces/inner_api/interfaces/: i_dhcp_client_service.h  i_dhcp_result_notify.h  i_dhcp_server_service.h  i_dhcp_service.h
dhcp/services/dhcp_client/: BUILD.gn
dhcp/services/dhcp_client/include/: dhcp_client.h  dhcp_function.h
dhcp/services/dhcp_client/src/: dhcp_api.cpp  dhcp_client.c  dhcp_function.c  dhcp_ipv4.c  dhcp_main.c  dhcp_socket.c
dhcp/services/dhcp_server/: BUILD.gn
dhcp/services/dhcp_server/include/: address_utils.h  dhcp_address_pool.h  dhcp_argument.h  dhcp_binding.h  dhcp_config.h  dhcp_define.h  dhcp_logger.h  dhcp_option.h  dhcp_server.h
dhcp/services/dhcp_server/src/: address_utils.c  common_util.c  dhcp_address_pool.c  dhcp_argument.c  dhcp_binding.c  dhcp_config.c  dhcp_dhcpd.c  dhcp_option.c  dhcp_server.c  hash_table.c
dhcp/services/mgr_service/: BUILD.gn
dhcp/services/mgr_service/include/: dhcp_client_service_impl.h  dhcp_event_subscriber.h  dhcp_func.h  dhcp_service.h
dhcp/services/mgr_service/src/: dhcp_client_service_impl.cpp  dhcp_event_subscriber.cpp  dhcp_func.cpp  dhcp_server_service.cpp  dhcp_service.cpp  dhcp_service_api.cpp
dhcp/test/services/dhcp_client/: BUILD.gn  dhcp_function_test.cpp  dhcp_ipv4_test.cpp  dhcp_socket_test.cpp  mock_system_func.cpp  mock_system_func.h
dhcp/test/services/mgr_service/: BUILD.gn  dhcp_func_test.cpp
dhcp/tests/services/dhcp_client/: BUILD.gn
dhcp/tests/services/mgr_service/: BUILD.gn
interfaces/innerkits/native_cpp/js_napi/: BUILD.gn  wifi_js.cpp  wifi_js.h
interfaces/innerkits/native_cpp/wifi_standard/: BUILD.gn
services/wifi_standard/ipc_framework/cRPC/: BUILD.gn
services/wifi_standard/wifi_framework/wifi_manage/: BUILD.gn  wifi_auth_center.cpp  wifi_auth_center.h  wifi_config_center.cpp  wifi_config_center.h  wifi_device_callback_proxy.cpp  wifi_manager.cpp  (+47 more)
services/wifi_standard/wifi_hal/: BUILD.gn  main.c  wifi_hal_adapter.c  wifi_hal_adapter.h  wifi_hal_ap_interface.c  wifi_hal_ap_interface.h  wifi_hal_base_interface.c  wifi_hal_base_interface.h  wifi_hal_callback.c  wifi_hal_callback.h  wifi_hal_chip_interface.c  wifi_hal_chip_interface.h  wifi_hal_crpc_ap.c  wifi_hal_crpc_ap.h  wifi_hal_crpc_base.c  wifi_hal_crpc_base.h  wifi_hal_crpc_chip.c  wifi_hal_crpc_chip.h  wifi_hal_crpc_common.c  wifi_hal_crpc_common.h  wifi_hal_crpc_p2p.c  wifi_hal_crpc_p2p.h  wifi_hal_crpc_server.c  wifi_hal_crpc_server.h  wifi_hal_crpc_sta.c  wifi_hal_crpc_sta.h  wifi_hal_crpc_supplicant.c  wifi_hal_crpc_supplicant.h  wifi_hal_define.h  wifi_hal_module_manage.c  wifi_hal_p2p_interface.c  wifi_hal_p2p_interface.h  wifi_hal_p2p_struct.h  wifi_hal_sta_interface.c  wifi_hal_sta_interface.h  wifi_hal_struct.h  wifi_hal_vendor_interface.c  wifi_hal_vendor_interface.h
test/wifi_client/: BUILD.gn  wifi_client.cpp
utils/src/: BUILD.gn  wifi_common_util.cpp
wifi/: BUILD.gn  bundle.json  hisysevent.yaml  wifi.gni  wifi_lite.gni
wifi/application/: resources.rar
wifi/application/portal_login/: BUILD.gn  README.md  build-profile.json5  code-linter.json5  hvigorw  oh-package.json5  publicity.xml  task.txt
wifi/application/wifi_direct_demo/: gradlew.bat
wifi/base/: BUILD.gn  libwifi_base.map
wifi/base/cRPC/: BUILD.gn  libcrpc_client_updater.map
wifi/base/inner_api/: ienhance_service.h  rpc.h  state_machine.h  wifi_crowdsourced_data.h  wifi_log.h
wifi/base/shared_util/: wifi_notification_util.cpp  wifi_notification_util.h  wifi_watchdog_utils.cpp  wifi_watchdog_utils.h
wifi/base/utils/: wifi_app_parser.cpp  wifi_app_parser.h  wifi_battery_utils.cpp  wifi_battery_utils.h  wifi_datashare_utils.cpp  wifi_datashare_utils.h  xml_parser.cpp  xml_parser.h
wifi/frameworks/: BUILD.gn  wifi_frameworks_sdk_block.txt
wifi/frameworks/ani/: BUILD.gn  wifi_ani_manager.cpp  wifi_manager.sts
wifi/frameworks/cj/: BUILD.gn
wifi/frameworks/native/: BUILD.gn  HotspotTypes.idl  IWifiHotspot.idl  IWifiHotspotMgr.idl  IWifiScan.idl  IWifiScanMgr.idl  libwifi_sdk.map
wifi/frameworks/wifi_ndk/: BUILD.gn  libwifi.ndk.json  oh_wifi.cpp
wifi/interfaces/inner_api/: wifi_device.h  wifi_hid2d.h  wifi_hotspot.h  wifi_msg.h  wifi_p2p.h  wifi_p2p_msg.h  wifi_scan.h
wifi/interfaces/innerkits/: BUILD.gn
wifi/relation_services/: BUILD.gn
wifi/relation_services/common/: wifi_hal_common_func.c  wifi_log.h
wifi/relation_services/dhcp_service/: main.c
wifi/relation_services/wifi_hal_service/: main.c  wifi_hal_adapter.c  wifi_hal_ap_interface.c  wifi_hal_callback.c  wifi_hal_callback.h  wifi_hal_chba_interface.c  wifi_hal_chip_interface.c  wifi_hal_crpc_ap.c  wifi_hal_crpc_base.c  wifi_hal_crpc_chip.c  wifi_hal_crpc_chip.h  wifi_hal_crpc_p2p.c  wifi_hal_crpc_server.c  wifi_hal_crpc_server.h  wifi_hal_crpc_sta.c  wifi_hal_crpc_sta.h  wifi_hal_define.h  wifi_hal_module_manage.c  wifi_hal_p2p_interface.c  wifi_hal_p2p_interface.h  wifi_hal_sta_interface.c  wifi_hal_sta_interface.h  wifi_hal_struct.h
wifi/resource/: wifi_monitor_apps.xml
wifi/test/: BUILD.gn  cfi_blocklist.txt  zly.txt
wifi/test/wifi_client/: BUILD.gn  wifi_client.cpp
wifi/test/wifi_testapp/: .gitignore  autocommit.py  build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5  package-lock.json  package.json
wifi/utils/: BUILD.gn
wifi/utils/extern_library/: BUILD.gn  wifi_intl_util.cpp  wifi_intl_util.h
wifi/utils/inc/: magic_enum.h  magic_enum.hpp  wifi_common_util.h  wifi_event_handler.h  wifi_hisysevent.h  wifi_library_utils.h  wifi_sa_manager.h  wifi_timer.h
wifi/utils/src/: BUILD.gn  exchange.cpp  wifi_common_util.cpp  wifi_event_handler.cpp  wifi_hisysevent.cpp  wifi_library_utils.cpp  wifi_sa_manager.cpp  wifi_timer.cpp
(+2552 files in other folders)
