# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("//foundation/communication/wifi/dhcp/dhcp_lite.gni")

  lite_component("dhcp") {
    deps = [
      "$DHCP_ROOT_DIR/services/dhcp_client:dhcp_client_service",
      "$DHCP_ROOT_DIR/services/dhcp_server:dhcp_server",
      "$DHCP_ROOT_DIR/services/mgr_service:dhcp_manager_service",
    ]

    features = []
  }
}
