# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ability_runtime_services_path = "//foundation/ability/ability_runtime/services"
ability_runtime_innerkits_path =
    "//foundation/ability/ability_runtime/interfaces/inner_api"

SUBSYSTEM_DIR = "//foundation/communication"
WIFI_ROOT_DIR = "$SUBSYSTEM_DIR/wifi/wifi"
DHCP_ROOT_DIR = "$SUBSYSTEM_DIR/wifi/dhcp"

declare_args() {
  wifi_feature_with_p2p = false
  wifi_feature_with_ap_intf = "wlan"
  wifi_feature_with_ap_num = 1
  wifi_feature_with_auth_disable = false
  wifi_feature_with_dhcp_disable = false
  wifi_feature_is_hdi_supported = false
}
