# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("//foundation/communication/wifi/wifi/wifi_lite.gni")
} else {
  import("//build/ohos.gni")
  import("//foundation/communication/wifi/wifi/wifi.gni")
}

local_base_sources = [
  "state_machine/src/handler.cpp",
  "state_machine/src/internal_message.cpp",
  "state_machine/src/message_queue.cpp",
  "state_machine/src/state.cpp",
  "state_machine/src/state_machine.cpp",
]

local_base_include_dirs = [
  "$WIFI_ROOT_DIR/base/cRPC/include",
  "$WIFI_ROOT_DIR/base/state_machine/include",
  "$WIFI_ROOT_DIR/base/inner_api",
  "$WIFI_ROOT_DIR/interfaces/inner_api",
  "$WIFI_ROOT_DIR/frameworks/native/interfaces",
  "$WIFI_ROOT_DIR/frameworks/native/c_adapter/inc",
  "$WIFI_ROOT_DIR/services/wifi_standard/include",
  "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/include",
  "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/log",
  "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/config",
  "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/net_helper",
  "$WIFI_ROOT_DIR/utils/inc",
]

if (defined(ohos_lite)) {
  shared_library("wifi_base") {
    sources = local_base_sources

    include_dirs = local_base_include_dirs

    deps = [
      "$WIFI_ROOT_DIR/base/cRPC:crpc_client",
      "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit:wifi_toolkit",
    ]

    external_deps = [ "hilog_lite:hilog_shared" ]

    configs -= [ "//build/lite/config:language_cpp" ]

    cflags_cc = [
      "-std=c++17",
      "-fno-rtti",
    ]

    ldflags = [
      "-fPIC",
      "-Wl,-E",
    ]

    defines = [ "OHOS_ARCH_LITE" ]
  }
  shared_library("wifi_base_without_crpc") {
    sources = local_base_sources

    include_dirs = local_base_include_dirs

    deps = [
      "$WIFI_ROOT_DIR/base/cRPC:crpc_client",
      "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit:wifi_toolkit",
    ]

    external_deps = [ "hilog_lite:hilog_shared" ]

    configs -= [ "//build/lite/config:language_cpp" ]

    cflags_cc = [
      "-std=c++17",
      "-fno-rtti",
    ]

    ldflags = [
      "-fPIC",
      "-Wl,-E",
    ]

    defines = [ "OHOS_ARCH_LITE" ]
  }
} else {
  config("wifi_base_exported_header") {
    visibility = [ ":*" ]
    include_dirs = local_base_include_dirs
  }

  ohos_shared_library("wifi_base") {
    branch_protector_ret = "pac_ret"

    sanitize = {
      cfi = true
      boundary_sanitize = true
      cfi_cross_dso = true
      debug = false
    }

    install_enable = true
    sources = local_base_sources

    include_dirs = local_base_include_dirs

    deps = [
      "$WIFI_ROOT_DIR/base/cRPC:crpc_client",
      "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit:wifi_toolkit",
      "$WIFI_ROOT_DIR/utils:wifi_utils",
    ]

    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]

    cflags_cc = [
      "-std=c++17",
      "-fno-rtti",
    ]

    ldflags = [
      "-fPIC",
      "-Wl,-E",
    ]

    public_configs = [ ":wifi_base_exported_header" ]

    part_name = "wifi"
    subsystem_name = "communication"
    innerapi_tags = [ "platformsdk" ]
  }

  ohos_shared_library("wifi_base_without_crpc") {
    branch_protector_ret = "pac_ret"

    sanitize = {
      cfi = true
      boundary_sanitize = true
      cfi_cross_dso = true
      debug = false
    }

    install_enable = true
    sources = local_base_sources

    include_dirs = local_base_include_dirs

    deps = [
      "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit:wifi_toolkit",
      "$WIFI_ROOT_DIR/utils:wifi_utils",
    ]

    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]

    cflags_cc = [
      "-std=c++17",
      "-fno-rtti",
    ]

    ldflags = [
      "-fPIC",
      "-Wl,-E",
    ]

    public_configs = [ ":wifi_base_exported_header" ]

    part_name = "wifi"
    subsystem_name = "communication"
    innerapi_tags = [ "platformsdk" ]
  }
}
