# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("//foundation/communication/wifi/wifi/wifi_lite.gni")
} else {
  import("//build/ohos.gni")
  import("//foundation/communication/wifi/wifi/wifi.gni")
}

group("wifi_kits") {
  deps = [ "$WIFI_ROOT_DIR/frameworks/native:wifi_sdk" ]
  if (!defined(ohos_lite)) {
    deps += [
      "$WIFI_ROOT_DIR/frameworks/js/napi:wifi",
      "$WIFI_ROOT_DIR/frameworks/js/napi:wifi_native_js",
      "$WIFI_ROOT_DIR/frameworks/js/napi:wifiext",
      "$WIFI_ROOT_DIR/frameworks/js/napi:wifimanager",
      "$WIFI_ROOT_DIR/frameworks/js/napi:wifimanagerext",
    ]
  }
}
