# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("//foundation/communication/wifi/wifi/wifi_lite.gni")
} else {
  import("//build/ohos.gni")
  import("//foundation/communication/wifi/wifi/wifi.gni")
}

local_base_sources = [ "dhcp_service/main.c" ]

local_base_include_dirs = []

if (defined(ohos_lite)) {
  executable("wifi_hal_service") {
    sources = local_base_sources

    include_dirs = local_base_include_dirs
    include_dirs +=
        [ "//third_party/wpa_supplicant/wpa_supplicant-2.9/src/common" ]

    deps = [
      "$WIFI_ROOT_DIR/base/cRPC:crpc_server",
      "$WIFI_ROOT_DIR/relation_services/etc/init:etc",
      "//third_party/wpa_supplicant/wpa_supplicant-2.9:wpa_supplicant",
    ]

    external_deps = [
      "bounds_checking_function:libsec_shared",
      "hilog_lite:hilog_shared",
    ]
    cflags = memory_optimization_cflags
    cflags_cc = memory_optimization_cflags_cc
    ldflags = memory_optimization_ldflags
    cflags_cc += [ "-fno-rtti" ]
    defines = [
      "_GNU_SOURCE",
      "OHOS_ARCH_LITE",
      "AP_INTF=\"$wifi_feature_with_ap_intf\"",
      "AP_NUM=$wifi_feature_with_ap_num",
    ]
    ldflags += [ "-lwpa_client" ]
  }
} else {
  ohos_executable("wifi_hal_service") {
    branch_protector_ret = "pac_ret"
    sanitize = {
      cfi = true  # Enable/disable control flow integrity detection
      boundary_sanitize = false  # Enable boundary san detection
      cfi_cross_dso = true  # Cross-SO CFI Checks
      integer_overflow = false  # Enable integer overflow detection
      ubsan = false  # Enable some Ubsan options
      cfi_vcall_icall_only = true
      debug = false
    }
    install_enable = true
    sources = local_base_sources

    include_dirs = local_base_include_dirs

    deps = [ "$WIFI_ROOT_DIR/relation_services/etc/init:etc" ]

    if (wifi_feature_with_hdi_wpa_supported) {
    } else {
      deps += [ "$WIFI_ROOT_DIR/base/cRPC:crpc_server" ]

      external_deps = [
        "c_utils:utils",
        "hilog:libhilog",
      ]

      external_deps += [ "wpa_supplicant:wpa_client" ]
    }

    defines = [
      "AP_INTF=\"$wifi_feature_with_ap_intf\"",
      "AP_NUM=$wifi_feature_with_ap_num",
    ]

    if (wifi_feature_with_local_random_mac) {
      defines += [ "SUPPORT_LOCAL_RANDOM_MAC" ]
    }

    if ("${CONFIG_CTRL_IFACE}" == "unix") {
      defines += [ "WPA_CTRL_IFACE_UNIX" ]
    }

    if (wifi_feature_non_seperate_p2p) {
      defines += [ "NON_SEPERATE_P2P" ]
    }

    cflags_cc = [ "-fno-rtti" ]
    cflags = [ "-Wno-deprecated-non-prototype" ]
    install_images = [ "system" ]
    part_name = "wifi"
    subsystem_name = "communication"
  }
}

group("relation_services") {
  deps = [ ":wifi_hal_service" ]
}