# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("//foundation/communication/wifi/wifi/wifi_lite.gni")
} else {
  import("//build/ohos.gni")
  import("//foundation/communication/wifi/wifi/wifi.gni")
}


if (defined(ohos_lite)) {
  local_base_sources = [ "dhcp_service/main.c" ]
  local_base_include_dirs = []
  executable("wifi_hal_service") {
    sources = local_base_sources

    include_dirs = local_base_include_dirs
    include_dirs +=
        [ "//third_party/wpa_supplicant/wpa_supplicant-2.9/src/common" ]

    deps = [
      "$WIFI_ROOT_DIR/base/cRPC:crpc_server",
      "$WIFI_ROOT_DIR/relation_services/etc/init:etc",
      "//third_party/wpa_supplicant/wpa_supplicant-2.9:wpa_supplicant",
    ]

    external_deps = [
      "bounds_checking_function:libsec_shared",
      "hilog_lite:hilog_shared",
    ]
    cflags = memory_optimization_cflags
    cflags_cc = memory_optimization_cflags_cc
    ldflags = memory_optimization_ldflags
    cflags_cc += [ "-fno-rtti" ]
    defines = [
      "_GNU_SOURCE",
      "OHOS_ARCH_LITE",
      "AP_INTF=\"$wifi_feature_with_ap_intf\"",
      "AP_NUM=$wifi_feature_with_ap_num",
    ]
    ldflags += [ "-lwpa_client" ]
  }

  group("relation_services") {
    deps = [ ":wifi_hal_service" ]
  }
} else {
  group("relation_services") {}
}