# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("//foundation/communication/wifi/wifi/wifi_lite.gni")
} else {
  import("//build/ohos.gni")
  import("//foundation/communication/wifi/wifi/wifi.gni")
}


if (defined(ohos_lite)) {
  group("relation_services") {
    deps = [
      "$WIFI_ROOT_DIR/base/cRPC:crpc_server",
      "$WIFI_ROOT_DIR/relation_services/etc/init:etc",
      "//third_party/wpa_supplicant/wpa_supplicant-2.9:wpa_supplicant",
    ]
  }
} else {
  group("relation_services") {
    deps = [ "$WIFI_ROOT_DIR/relation_services/etc/init:etc" ]

    if (wifi_feature_with_hdi_wpa_supported) {
    } else {
      deps += [ "$WIFI_ROOT_DIR/base/cRPC:crpc_server" ]

      external_deps = [
        "c_utils:utils",
        "hilog:libhilog",
      ]

      external_deps += [ "wpa_supplicant:wpa_client" ]
    }
  }
}